2006-05-19 Sandro Santilli <strk@refractions.net>

	* tests/unit/geom/Geometry/coversTest.cpp:
	keep tests in 'tut' namespace.
	* tests/xmltester/XMLTester.cpp: report
	error on load of requested tests.

2006-05-18 Sandro Santilli <strk@refractions.net>

	* source/headers/geos/geom.h: fixed doxygen
	header for mainpage.
	* source/headers/geos/geom/BinaryOp.h:
	added compile-time defines to avoid 
	precision-reduction and simplify based
	policies (defaults to enabled).
	* source/geom/Geometry.cpp,
	source/headers/geos/geom/Geometry.h: added
	covers() and coveredBy() predicates.
	* tests/unit/Makefile.am,
	tests/unit/geom/Geometry/coversTest.cpp:
	added test for the new predicates.

2006-05-17 Sandro Santilli <strk@refractions.net>

	* source/geom/IntersectionMatrix.cpp,
	source/headers/geos/geom/IntersectionMatrix.h,
	tests/unit/geom/IntersectionMatrixTest.cpp:
	doxygen comments fixup; port info; const correctness;
	added isCovers() and isCoveredBy() public methods
	and associated tests.

2006-05-05 Sandro Santilli <strk@refractions.net>

	* source/noding/snapround/MCIndexSnapRounder.cpp,
	source/noding/snapround/SimpleSnapRounder.cpp:
	had noding validation failure throw an exception.
	* tests/unit/Makefile.am,
	tests/unit/noding/SegmentStringTest.cpp:
	SegmentString unit test.
	* source/headers/geos/noding/SegmentString.h,
	source/headers/geos/noding/SegmentString.inl,
	source/noding/SegmentNodeList.cpp: SegmentString::getContext()
	dropped, new name is getData() to reflect change in JTS
	* source/headers/geos/geom.h: fixed namespace
	qualification in doxygen page about C++ interface.

2006-05-04 Sandro Santilli <strk@refractions.net>

        * source/geom/GeometryCollection.cpp, source/geom/LineString.cpp,
        source/geom/MultiLineString.cpp, source/geom/MultiPoint.cpp,
        source/geom/MultiPolygon.cpp, source/geom/Point.cpp,
        source/geom/Polygon.cpp, source/headers/geos/geom/Dimension.h,
        source/headers/geos/geom/Geometry.h,